[package]
name = "rabe"
version = "0.2.3"
description = "ABE Schemes implemented in rust."
authors = [
    "Schanzenbach, Martin <martin.schanzenbach@aisec.fraunhofer.de>",
    "Bramm, Georg <georg.bramm@aisec.fraunhofer.de>",
    "Schuette, Julian <julian.schuette@aisec.fraunhofer.de>"
]
keywords = ["pairing","crypto","cryptography", "abe"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Fraunhofer-AISEC/rabe"
repository = "https://github.com/Fraunhofer-AISEC/rabe"
documentation = "https://docs.rs/rabe"

[target.aarch64-linux-android]
ar = "NDK/arm64/bin/aarch64-linux-android-ar"
linker = "NDK/arm64/bin/aarch64-linux-android-clang"

[target.armv7-linux-androideabi]
ar = "NDK/arm/bin/arm-linux-androideabi-ar"
linker = "NDK/arm/bin/arm-linux-androideabi-clang"

[target.i686-linux-android]
ar = "NDK/x86/bin/i686-linux-android-ar"
linker = "NDK/x86/bin/i686-linux-android-clang"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[lib]
name="rabe"
crate-type = ["staticlib", "cdylib", "dylib"]
bench = false

[dependencies]
rabe-bn = { path = "../bn/" }
libc = "0.2.0"
rand = "0.7.3"
rust-crypto = "0.2.36"