[package]
name = "rabe"
version = "0.2.5"
description = "ABE Schemes implemented in rust."
authors = [
    "Schanzenbach, Martin <martin.schanzenbach@aisec.fraunhofer.de>",
    "Bramm, Georg <georg.bramm@aisec.fraunhofer.de>",
    "Schuette, Julian <julian.schuette@aisec.fraunhofer.de>"
]
keywords = ["pairing","crypto","cryptography", "abe"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Fraunhofer-AISEC/rabe"
repository = "https://github.com/Fraunhofer-AISEC/rabe"
documentation = "https://docs.rs/rabe"

[lib]
name="rabe"
#crate-type=["staticlib"] # still need a panic handler...
bench = false

[dependencies]
#base64 = "0.10.1"
#blake2-rfc = "0.2.17"
rabe-bn = { path = "../rabe-bn-own", default-features = false }
#byteorder = "1.2.2"
#libc = "0.2.0"
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0.118", default-features = false, features = [ "derive" ] }
#serde_json = "1.0.60"
serde_cbor = "0.11.1"
#serde_derive = "1.0.118"
#pest = "2.0"
#pest_derive = "2.0"
#permutation = "0.2.5"

heapless = { version = "0.6.0", features = [ "serde" ] }
aes = "0.6.0"
ccm = { version = "0.3.0", default-features = false } # TODO maybe include heapless feature??
sha3 = { version = "0.9.1", default-features = false }

[dev-dependencies.rand]
version = ""
default-features = true